# midas

./: .gitignore  README.md
backend/: .flake8  pyproject.toml
backend/midas/: main.py  models.py  service.py
backend/tests/: test_api.py
frontend/: package.json  tailwind.config.cjs
frontend/src/components/: ThemeSelector.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
